--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -117,6 +117,25 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.962" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="Teacher's Desk"
+            android:textColor="#fff"
+            android:shadowColor="#000"
+            android:elevation="4dp"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/toolbar"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.050000012" />
+
 
 
 
@@ -142,7 +161,8 @@
         app:tabInlineLabel="true"
         app:tabPaddingBottom="2dp"
         app:tabSelectedTextColor="#fff"
-        app:tabTextColor="#000">
+        app:tabTextColor="#000"
+        android:animateLayoutChanges="true">
 
 
         <com.google.android.material.tabs.TabItem
