--- a/app/src/main/res/layout/fragment_view_fragment.xml
+++ b/app/src/main/res/layout/fragment_view_fragment.xml
@@ -9,14 +9,18 @@
 
   <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
       android:id="@+id/swipe"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent">
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="60dp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recycler_view"
         android:layout_marginBottom="80dp"/>
+
+
+  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
     <Button
@@ -35,7 +39,7 @@
         android:textStyle="italic"
         android:alpha=".89"/>
 
-  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 
 
 
