--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -169,7 +169,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
                         app:layout_constraintVertical_bias="0.0"
                         app:passwordToggleEnabled="true"
-                        app:passwordToggleTintMode="screen">
+                        app:passwordToggleTintMode="src_atop">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/lnamelogintext"
