--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -57,18 +57,16 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="28dp"
             android:fontFamily="@font/roboto"
-            android:text="Tushar Tambi"
+            android:text="Tushar"
             android:textAllCaps="false"
             android:textColor="#fff"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.535"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_img"
-            app:layout_constraintVertical_bias="0.246" />
+            app:layout_constraintTop_toBottomOf="@+id/profile_img" />
 
 
         <ImageView
