New Upload Page and a Add Publication page added.

--- a/app/src/main/res/layout/fragment_profile_fragement.xml
+++ b/app/src/main/res/layout/fragment_profile_fragement.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:layout_height="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
     tools:context=".ui.Profiile.ProfileActivity"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
 
 
@@ -345,8 +341,9 @@
         </androidx.cardview.widget.CardView>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
