--- a/app/src/main/res/menu/profile_update.xml
+++ b/app/src/main/res/menu/profile_update.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <item android:id="@+id/update_img"
-        android:title="Update"/>
-
-    <item android:id="@+id/view_img"
-        android:title="View"/>
+    <item android:id="@+id/searchicon"
+        android:title="Search"
+        android:icon="@drawable/ic_action_action_search"
+        app:showAsAction="ifRoom" />
 
 </menu>
